force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/loan__Loan_Disbursal_Transaction__c.object-meta.xml
<CustomObject>
    <customHelpPage>loan__LoanDisbursalTransactionHelp</customHelpPage>
    <description>This is the final stage where all the documents submitted by a customer are finally checked and the loan is approved.</description>
    <label>Loan Disbursal Transaction</label>
    <nameField>
        <displayFormat>LDTI-{0000000000}</displayFormat>
        <label>Loan Disbursal Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Disbursal Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>