force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__Advance_Additional_Interest__c.field-meta.xml
<CustomField>
    <fullName>loan__Advance_Additional_Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This refers to the additional interest amount collected as part of disbursal.</description>
    <inlineHelpText>This refers to the additional interest amount collected as part of disbursal.</inlineHelpText>
    <label>Advance Additional Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>