force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>loan__Bank_Account__c</referenceTo>
    <relationshipLabel>Loan Disbursal Transactions</relationshipLabel>
    <relationshipName>Loan_Disbursal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>