force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__Cleared__c.field-meta.xml
<CustomField>
    <fullName>loan__Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cleared</label>
    <type>Checkbox</type>
</CustomField>