force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__Contribution_From_Excess__c.field-meta.xml
<CustomField>
    <fullName>loan__Contribution_From_Excess__c</fullName>
    <inlineHelpText>Amount contributed from &apos;Excess&apos; towards Financed amount in this transaction. &apos;Excess&apos; is amount paid by borrower in excess in previous payments.</inlineHelpText>
    <label>Contribution From Excess</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>