force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__Disbursal_Time__c.field-meta.xml
<CustomField>
    <fullName>loan__Disbursal_Time__c</fullName>
    <label>Disbursal Time</label>
    <type>DateTime</type>
</CustomField>