force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__Disbursed_Amt__c.field-meta.xml
<CustomField>
    <fullName>loan__Disbursed_Amt__c</fullName>
    <description>Disbursal Transaction Amount</description>
    <inlineHelpText>Disbursal Transaction Amount</inlineHelpText>
    <label>Disbursal Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>