force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__Due_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>loan__Due_Snapshot__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <description>Stores snapshot of dues satisfied. This occurs when advance additional interest is added to bill and is collected by disbursal.</description>
    <inlineHelpText>Stores snapshot of dues satisfied. This occurs when advance additional interest is added to bill and is collected by disbursal.</inlineHelpText>
    <label>Due Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>