force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__External_Id__c.field-meta.xml
<CustomField>
    <fullName>loan__External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>