force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__Mode_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>loan__Mode_of_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mode of Payment</label>
    <referenceTo>loan__Payment_Mode__c</referenceTo>
    <relationshipLabel>Loan Disbursal Transactions</relationshipLabel>
    <relationshipName>Loan_Disbursal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>