force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__Number_Of_Interest_Only_Payments__c.field-meta.xml
<CustomField>
    <fullName>loan__Number_Of_Interest_Only_Payments__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used to give the number of interest only payments while doing last disbursal transaction</description>
    <label>Number Of Interest Only Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>