force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__Reference__c.field-meta.xml
<CustomField>
    <fullName>loan__Reference__c</fullName>
    <label>Reference</label>
    <length>64</length>
    <type>Text</type>
</CustomField>