force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__Sent_To_ACH_On__c.field-meta.xml
<CustomField>
    <fullName>loan__Sent_To_ACH_On__c</fullName>
    <inlineHelpText>This is the date the transaction was sent to ACH. The lock period for clearing is counted from this date.</inlineHelpText>
    <label>Sent To ACH On</label>
    <type>Date</type>
</CustomField>