force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/loan__Transaction_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Transaction_Creation_Date__c</fullName>
    <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
    <description>This field will store the disbursal date.</description>
    <inlineHelpText>This field will store the disbursal date.</inlineHelpText>
    <label>Transaction Creation Date</label>
    <type>Date</type>
</CustomField>