force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/ORDE_Financial_Fees_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>ORDE_Financial_Fees_Total_Amount__c</fullName>
    <label>ORDE Financial Fees Total Amount</label>
    <summarizedField>loan__Disbursal_Txn_Distribution__c.loan__Distribution_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>loan__Disbursal_Txn_Distribution__c.Amount_Going_To__c</field>
        <operation>equals</operation>
        <value>Elixir</value>
    </summaryFilterItems>
    <summaryForeignKey>loan__Disbursal_Txn_Distribution__c.loan__Loan_Disbursal_Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>