force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/peer__Bank_Statement_Exception__c.field-meta.xml
<CustomField>
    <fullName>peer__Bank_Statement_Exception__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Statement Exception</label>
    <referenceTo>peer__Bank_Recon_Exception__c</referenceTo>
    <relationshipLabel>Loan Disbursal Transactions</relationshipLabel>
    <relationshipName>Loan_Disbursal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>