force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/fields/peer__Verification__c.field-meta.xml
<CustomField>
    <fullName>peer__Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verification</label>
    <referenceTo>peer__Verification__c</referenceTo>
    <relationshipLabel>Loan Disbursal Transactions</relationshipLabel>
    <relationshipName>Loan_Disbursal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>