force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/validationRules/loan__Expected_Disbursal_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Expected_Disbursal_Date_Check</fullName>
    <active>false</active>
    <errorConditionFormula>OR(AND(NOT(ISBLANK(loan__Loan_Account__r.loan__Expected_Disbursal_Date__c)), NOT(ISBLANK(loan__Disbursal_Date__c)),(loan__Disbursal_Date__c &lt;  loan__Loan_Account__r.loan__Expected_Disbursal_Date__c)), AND(NOT(ISBLANK(loan__Loan_Account__r.loan__Disbursal_Date__c)), NOT(ISBLANK(loan__Disbursal_Date__c)),(loan__Disbursal_Date__c &lt;  loan__Loan_Account__r.loan__Disbursal_Date__c)))</errorConditionFormula>
    <errorMessage>Disbursal Transaction Date should be on or after the Contract Date.</errorMessage>
</ValidationRule>