force-app/main/default/objects/loan__Loan_Disbursal_Transaction__c/validationRules/loan__FiT_Last_Accrual_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__FiT_Last_Accrual_Date_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(loan__Loan_Account__r.loan__Product_Type__c, &apos;Loan&apos;), loan__Loan_Account__r.loan__Funding_in_Tranches__c, ( loan__Loan_Account__r.loan__Cleared_Disbursal_Txn_Count__c &gt; 0), NOT(ISBLANK(loan__Loan_Account__r.loan__Last_Accrual_Date__c)), (loan__Disbursal_Date__c  &lt;  loan__Loan_Account__r.loan__Last_Accrual_Date__c))</errorConditionFormula>
    <errorDisplayField>loan__ACH_Filename__c</errorDisplayField>
    <errorMessage>Disbursal Transaction Date cannot be before the Last Interest Accrual Date.</errorMessage>
</ValidationRule>